<resources>
    <string name="app_name">Notifycation</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="str_outline_null">概要不能为空</string>
    <string name="str_title_null">标题不能为空</string>
    <string name="str_content_null">内容不能为空</string>
    <string name="str_outline">概要</string>
    <string name="str_outline_input">请输入概要</string>
    <string name="str_title">标题</string>
    <string name="str_title_input">请输入标题</string>
    <string name="str_content">内容</string>
    <string name="str_content_input">请输入内容</string>
    <string name="str_send">发送</string>
</resources>
